--- a/_small_bookdown.yml
+++ b/_small_bookdown.yml
@@ -20,7 +20,7 @@ rmd_files: [
   
   # SELECT PAGES
   "new_pages/cat_preview.Rmd",          # DO NOT CHANGE - start of new section
-  "new_pages/epicurves.Rmd"      # *****  !!! CHANGE THIS TO THE PAGE YOU WANT TO PRINT !!! ******
+  "new_pages/cleaning.Rmd"      # *****  !!! CHANGE THIS TO THE PAGE YOU WANT TO PRINT !!! ******
 
 
 
