first start on AMR chapter

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -68,6 +68,7 @@ rmd_files: [
   "new_pages/combination_analysis.Rmd",
   "new_pages/transmission_chains.Rmd",
   "new_pages/phylogenetic_trees.Rmd",
+  "new_pages/AMR.Rmd",
   "new_pages/interactive_plots.Rmd",
 
   # REPORTS AND DASHBOARDS
