--- a/_small_bookdown.yml
+++ b/_small_bookdown.yml
@@ -18,9 +18,13 @@ rmd_files: [
   # INTRO & CONTRIBUTORS
   "index.Rmd",                          # DO NOT CHANGE - objectives, how to read, authors, acknowledgements
   
+  "new_pages/cat_about_book.Rmd",           # start of new section
+  "new_pages/editorial_style.Rmd",          # editorial style
+  "new_pages/data_used.Rmd",                # data used
+  
   # SELECT PAGES
   "new_pages/cat_preview.Rmd",          # DO NOT CHANGE - start of new section
-  "new_pages/cleaning.Rmd"      # *****  !!! CHANGE THIS TO THE PAGE YOU WANT TO PRINT !!! ******
+  "new_pages/basics.Rmd"      # *****  !!! CHANGE THIS TO THE PAGE YOU WANT TO PRINT !!! ******
 
 
 
