--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,3 +5,6 @@
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
 *       @global-ntluong95 @global-nsbatra @global-aspina7
+
+# Next, we can add language-specific reviewers.
+/es/    @robcrystalornelas
