add cookies and adjust google analytics tag in html

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,10 @@ book:
   date: today
   date-format: "MMM D, YYYY"
   favicon: "images/Applied_Epi_logo.png"
+  cookie-consent:
+    type: implied
+    style: simple
+    palette: dark
   google-analytics:
     tracking-id: "G-QXDW878QLX"
     anonymize-ip: true
