Update the message

--- a/.github/workflows/create_pr_on_pr.yml
+++ b/.github/workflows/create_pr_on_pr.yml
@@ -101,19 +101,19 @@ jobs:
 
             # Mention a user in the PR description
             if [ "$lang" = "vn" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "fr" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @nsbatra, please check the box when you finish"
             elif [ "$lang" = "es" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @robcrystalornelas, please check the box when you finish"
             elif [ "$lang" = "jp" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "tr" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "pt" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "ru" ]; then
-              checkboxes="$checkboxes @ntluong95, please review"
+              checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             fi
 
 
