--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
 
@@ -37,7 +37,7 @@ jobs:
       - name: Restore R package from renv
         run: |
           install.packages("renv")
-          renv::restore()
+          Rscript -e 'renv::restore()'
 #          Rscript -e '
 #          if (!requireNamespace("pacman", quietly = TRUE)) install.packages("pacman")
 #          pacman::p_load(
