update tracking cookies for gtag

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,7 @@ book:
     palette: dark
   google-analytics:
     tracking-id: "G-QXDW878QLX"
+    storage: cookies
     anonymize-ip: true
 
   chapters:
