--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -1,63 +1,87 @@
 name: Render Book on PR to Main
 
 on:
+  workflow_dispatch:  # Allows the workflow to be triggered manually
   pull_request_target:
     types: [closed]
     branches:
       - main
 
 jobs:
-  check-merged:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'handbook_v*')
+  setup-environment-packages:
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'handbook_v')
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
-
-  build-and-render:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'handbook_v*')
-    runs-on: ubuntu-latest
-    needs: [check-merged]  # Ensure this runs only after the check-merged job completes
+    continue-on-error: true
+    env:
+      RENV_PATHS_ROOT: ~/.cache/R/renv
+      R_LIBS_USER: ~/.cache/R/renv/Library
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Quarto
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3.2'
+
+      - name: Setup pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Install system dependencies and R packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libxml2-dev libssl-dev libfontconfig1-dev libharfbuzz-dev libfribidi-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev libglpk-dev r-cran-rjava r-base-dev openjdk-11-jdk gdal-bin libgdal-dev libxslt1-dev libgit2-dev libgeos-dev libproj-dev libudunits2-dev libcairo2-dev libxt-dev libmagick++-dev libpoppler-cpp-dev libpq-dev libmysqlclient-dev libsqlite3-dev libssh2-1-dev libgmp3-dev libmpfr-dev libprotobuf-dev protobuf-compiler libgl1-mesa-dev libglu1-mesa-dev libpoppler-glib-dev libtbb-dev libsodium-dev libv8-dev libnetcdf-dev netcdf-bin libjq-dev libharfbuzz-dev libfribidi-dev libnode-dev jq
+          sudo R CMD javareconf
+          
+      - name: Set up renv
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 2
+
+      - name: Install quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          tinytex: false
-          # uncomment and specify version if needed
-          # version: SPECIFIC-QUARTO-VERSION-HERE
+          version: 1.4.550
 
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v2
-
-      - name: Restore R package from renv
-        run: |
-          install.packages("renv")
-          Rscript -e 'renv::restore()'
-#          Rscript -e '
-#          if (!requireNamespace("pacman", quietly = TRUE)) install.packages("pacman")
-#          pacman::p_load(
-#            "tidyverse", "googlesheets4", "learnr", "swirl", "here", "rio", "openxlsx",
-#            "pacman", "renv", "remotes", "linelist", "naniar", "janitor", "gtsummary",
-#            "rstatix", "broom", "lmtest", "easystats", "epicontacts", "EpiNow2",
-#            "EpiEstim", "projections", "incidence2", "i2extras", "epitrix", "distcrete",
-#            "cowplot", "RColorBrewer", "ggnewscale", "DiagrammeR", "gghighlight", "ggrepel",
-#            "plotly", "gganimate", "sf", "tmap", "OpenStreetMap", "spdep", "rmarkdown",
-#            "reportfactory", "officer", "flexdashboard", "shiny", "knitr", "flextable",
-#            "ggtree", "ape", "treeio", "babelquarto", "babeldown")'
-        
-
-      - name: Render Book
-        run: Rscript -e 'source("quarto_runfile.R")'
-
-      - name: Publish to Netlify (and render)
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: netlify
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-
+      # - name: Print packages
+      #   run: Rscript -e 'names(installed.packages()[,3])'
       
+      # - name: Render the book
+      #   # uses: quarto-dev/quarto-actions/render@v2
+      #   run: Rscript -e 'source("quarto_runfile.R")'
+
+      - name: the book
+        shell: Rscript {0}
+        run: |
+          babelquarto::render_book()
+        continue-on-error: true
+
+  render-and-publish:
+    needs: setup-environment-packages
+    runs-on: ubuntu-latest
+    if: success()  
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+        
+      - name: Commit results to main branch
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add .
+          git commit -m "CI added changes `date +'%Y-%m-%d %H:%M:%S'`" || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          branch: main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
+
+      # - name: Publish to Netlify
+      #   uses: quarto-dev/quarto-actions/publish@v2
+      #   with:
+      #     target: netlify
+      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
