--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -52,11 +52,7 @@ jobs:
       #   # uses: quarto-dev/quarto-actions/render@v2
       #   run: Rscript -e 'source("quarto_runfile.R")'
 
-      - name: the book
-        shell: Rscript {0}
-        run: |
-          babelquarto::render_book()
-        continue-on-error: true
+
 
   render-and-publish:
     needs: setup-environment-packages
@@ -65,6 +61,12 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+
+      - name: Render the book
+        shell: Rscript {0}
+        run: |
+          babelquarto::render_book()
+        continue-on-error: true
         
       - name: Commit results to main branch
         run: |
