--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -5,7 +5,7 @@ on:
   pull_request_target:
     types: [closed]
     branches:
-      - main
+      - master
 
 jobs:
   setup-environment-packages:
