--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -74,10 +74,11 @@ jobs:
           git add .
           git commit -m "CI added changes `date +'%Y-%m-%d %H:%M:%S'`" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
+
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          branch: main
+          branch: master
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
 
