update github action

--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -51,6 +51,11 @@ jobs:
       # - name: Render the book
       #   # uses: quarto-dev/quarto-actions/render@v2
       #   run: Rscript -e 'source("quarto_runfile.R")'
+      - name: Fix locale
+        run: |
+          export LANG=en_US.UTF-8
+          export LC_CTYPE=en_US.UTF-8
+          export LC_ALL=en_US.UTF-8
 
       - name: Render the book
         shell: Rscript {0}
