--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,50 @@ published-title: "Last updated"
 #   default: full
 #   group: 
 #     - [full, small]
+lightbox: true # Lightbox images allow a reader to click to see a larger version of the image (including any caption)
+
+babelquarto:
+  languagecodes:
+  - name: vn
+    text: "Tiếng Việt"
+  - name: fr
+    text: "Français"
+  - name: es
+    text: "Español"
+  - name: jp
+    text: "日本"
+  - name: tr
+    text: "Türkçe"
+  - name: pt
+    text: "Português"
+  - name: ru
+    text: "Русский"
+  - name: de
+    text: "Deutsch"
+  - name: en
+    text: "English"
+
+  mainlanguage: 'en'
+  languages: ['fr', 'es', 'vn', 'jp', 'pt', 'tr', 'ru']  #'de'  fr
+
+title-vn: "Cẩm nang dịch tễ học với R"
+title-fr: "Le Epi R Handbook"
+title-es: "EpiRhandbook en español"
+title-jp: "疫学のための R ハンドブック"
+title-tr: "Epidemiyologun R Rehberi"
+title-pt: "Manual de R para Epidemiologistas"
+title-ru: "Справочник эпидемиолога R"
+title-de: "EpiRhandbook auf Deutsch"
+
+lang: en
+
+format:
+  html: 
+    include-in-header:
+      - banner.html
+    theme:
+      light: cosmo
+      dark: [darkly, theme-dark.scss]
 
 book:
   title: "The Epidemiologist R Handbook"
@@ -23,12 +67,12 @@ book:
         href: "https://twitter.com/appliedepi"
       - icon: linkedin
         href: "https://www.linkedin.com/company/appliedepi/"
-    # - icon: github
-    #   menu:
-    # - text: Source Code
-    #   url: "https://github.com/appliedepi/epihandbook_eng"
-    # - text: Report a Bug
-    #   url: "https://github.com/appliedepi/epihandbook_eng/issues/new"
+      # - icon: github
+      #   menu:
+      #     - text: Source Code
+      #       url: "https://github.com/appliedepi/epihandbook_eng"
+      #     - text: Report a Bug
+      #       url: "https://github.com/appliedepi/epihandbook_eng/issues/new"
 
   date: today
   date-format: "MMM D, YYYY"
@@ -48,7 +92,7 @@ book:
 
   # ABOUT BOOK
   - part: "About this book"
-    part-vn: "Về cuốn sách này"
+    part-vn: "Về cuốn sách này" 
     part-fr: "À propos de ce livre"
     part-es: "Acerca de este libro"
     part-jp: "本書について"
@@ -77,7 +121,7 @@ book:
     - new_pages/r_projects.qmd
     - new_pages/importing.qmd
 
-  # DATA MANGEMENT
+  # DATA MANAGEMENT
   - part: "Data Management"
     part-vn: "Quản lý dữ liệu"
     part-fr: "Gestion des données"
@@ -97,7 +141,6 @@ book:
     - new_pages/joining_matching.qmd
     - new_pages/deduplication.qmd
     - new_pages/iteration.qmd
-
 
   # ANALYSIS
   - part: "Analysis"
@@ -122,7 +165,6 @@ book:
     - new_pages/survey_analysis.qmd #done
     - new_pages/survival_analysis.qmd #done
     - new_pages/gis.qmd #done
-
 
   # DATA VIZ
   - part: "Data Visualization"
@@ -165,7 +207,6 @@ book:
     - new_pages/flexdashboard.qmd #done
     - new_pages/shiny_basics.qmd #done
 
-
   # MISCELLANEOUS
   - part: "Miscellaneous"
     part-vn: "Các chủ điểm khác"
@@ -187,51 +228,3 @@ book:
     - new_pages/data_table.qmd #done
     # new_pages/rstudio_advanced.qmd
 
-
-
-lightbox: true # Lightbox images allow a reader to click to see a larger version of the image (including any caption)
-
-
-babelquarto:
-  languagecodes:
-  - name: vn
-    text: "Tiếng Việt"
-  - name: fr
-    text: "Français"
-  - name: es
-    text: "Español"
-  - name: jp
-    text: "日本"
-  - name: tr
-    text: "Türkçe"
-  - name: pt
-    text: "Português"
-  - name: ru
-    text: "Русский"
-  - name: de
-    text: "Deutsch"
-  - name: en
-    text: "English"
-
-  mainlanguage: 'en'
-  languages: ['fr', 'es', 'vn', 'jp', 'pt', 'tr', 'ru']  #'de'  fr
-
-title-vn: Cẩm nang dịch tễ học với R
-title-fr: Le Epi R Handbook
-title-es: EpiRhandbook en español
-title-jp: 疫学のための R ハンドブック
-title-tr: Epidemiyologun R Rehberi
-title-pt: Manual de R para Epidemiologistas
-title-ru: Справочник эпидемиолога R
-title-de: EpiRhandbook auf Deutsch
-
-
-lang: en
-
-format:
-  html: 
-    include-in-header:
-      - banner.html
-    theme:
-      light: cosmo
-      dark: [darkly, theme-dark.scss] #superhero
