--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -5,10 +5,10 @@ on:
   pull_request_target:
     types: [closed]
     branches:
-      - master
+      - main
 
 jobs:
-  setup-environment-packages:
+  render-and-commit:
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'handbook_v')
     runs-on: ubuntu-latest
     continue-on-error: true
@@ -40,6 +40,12 @@ jobs:
         with:
           cache-version: 2
 
+      # - name: Install Bioconductor packages
+      #   run: |
+      #     Rscript -e 'install.packages("babelquarto", repos = c("https://ropensci.r-universe.dev", "https://cloud.r-project.org"))'   
+      #     Rscript -e 'install.packages("babeldown", repos = c("https://ropensci.r-universe.dev", "https://cloud.r-project.org"))'   
+      #     Rscript -e 'renv::snapshot()'                
+
       - name: Install quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
@@ -47,30 +53,27 @@ jobs:
 
       # - name: Print packages
       #   run: Rscript -e 'names(installed.packages()[,3])'
-      
-      # - name: Render the book
-      #   # uses: quarto-dev/quarto-actions/render@v2
-      #   run: Rscript -e 'source("quarto_runfile.R")'
       - name: Fix locale
         run: |
           export LANG=en_US.UTF-8
           export LC_CTYPE=en_US.UTF-8
-          export LC_ALL=en_US.UTF-8
+          export LC_ALL=en_US.UTF-8      
 
       - name: Render the book
-        shell: Rscript {0}
-        run: |
-          babelquarto::render_book()
+        # uses: quarto-dev/quarto-actions/render@v2
+        run: Rscript -e 'source("quarto_runfile.R")'
         continue-on-error: true
-
-  render-and-publish:
-    needs: setup-environment-packages
-    runs-on: ubuntu-latest
-    if: success()  
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
+      
+      # - name: Render the book
+      #   run: Rscript -e 'library(babelquarto); babelquarto::render_book()'
+        
+  # render-and-publish:
+  #   needs: setup-environment-packages
+  #   runs-on: ubuntu-latest
+  #   if: success()  
+  #   steps:
+  #     - name: Check out repository
+  #       uses: actions/checkout@v4
         
       - name: Commit results to main branch
         run: |
@@ -78,14 +81,14 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add .
           git commit -m "CI added changes `date +'%Y-%m-%d %H:%M:%S'`" || echo "No changes to commit"
-          git push origin || echo "No changes to commit"
+          git push origin deploy-preview || echo "No changes to commit"
 
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          branch: master
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          force: true
+      # - name: Push changes
+      #   uses: ad-m/github-push-action@master
+      #   with:
+      #     branch: main
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     force: true
 
       # - name: Publish to Netlify
       #   uses: quarto-dev/quarto-actions/publish@v2
