Ensure fetching before merging into deploy-preview branch

--- a/.github/workflows/render_book_on_pr.yml
+++ b/.github/workflows/render_book_on_pr.yml
@@ -20,6 +20,13 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          ref: deploy-preview
+
+      - name: Fetch latest changes
+        run: |
+          git fetch origin
+          git reset --hard origin/deploy-preview
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
